--- a/SGRT Patient Tool.ipynb
+++ b/SGRT Patient Tool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
     "# Import SGRT Libraries\n",
     "import SGRTFileReaders as fs\n",
     "\n",
-    "sgrt_path = ('Y:\\\\AlignRT Backup\\\\Room A')\n",
+    "sgrt_path = ('Sample_Directory')\n",
     "\n",
     "class PatientDetails:\n",
     "    \"\"\"The PatientDeatils class contains attributes and methods for reading and storing \n",
@@ -50,7 +50,7 @@
     "        \n",
     "    def get_last_treatment(self,path):\n",
     "        print path\n",
-    "        list_of_reports = glob.glob('{0}\\\\Reports\\\\*'.format(path)) # * means all if need specific format then *.csv\n",
+    "        list_of_reports = glob.glob('{0}/Reports/*'.format(path)) # * means all if need specific format then *.csv\n",
     "        latest_file = max(list_of_reports, key=os.path.getctime)\n",
     "        print latest_file\n",
     "        return latest_file\n",
@@ -64,9 +64,9 @@
     "    # Determine which of the folders correspond to patients\n",
     "    sgrt_patients = []\n",
     "    for folder in sgrt_folders:\n",
-    "        if (os.path.isfile('{0}\\\\{1}\\\\Patient Details.ini'.format(sgrt_path,folder)) or \n",
-    "            os.path.isfile('{0}\\\\{1}\\\\Patient_Details.ini'.format(sgrt_path,folder))):\n",
-    "            sgrt_patients.append(Patient(folder,'{0}\\\\{1}'.format(sgrt_path,folder)))\n",
+    "        if (os.path.isfile('{0}/{1}/Patient Details.ini'.format(sgrt_path,folder)) or \n",
+    "            os.path.isfile('{0}/{1}/Patient_Details.ini'.format(sgrt_path,folder))):\n",
+    "            sgrt_patients.append(Patient(folder,'{0}/{1}'.format(sgrt_path,folder)))\n",
     "    \n",
     "    print('There are {0} patient folders in {1}'.format(len(sgrt_patients),sgrt_path))\n",
     "    for patient in sgrt_patients:\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -87,15 +87,23 @@
      "output_type": "stream",
      "text": [
       "Welcome to the SGRT Patient Tool\n",
-      "Y:\\AlignRT Backup\\Room A\\20160804MG\n",
-      "Y:\\AlignRT Backup\\Room A\\20160804MG\\Reports\\20160804MG_170611_165801_TreatmentReport.pdf\n",
-      "Y:\\AlignRT Backup\\Room A\\20170303ZEL\n",
-      "Y:\\AlignRT Backup\\Room A\\20170303ZEL\\Reports\\20170303ZEL_170307_095804_TreatmentReport.pdf\n",
-      "Y:\\AlignRT Backup\\Room A\\20170307JHV\n",
-      "Y:\\AlignRT Backup\\Room A\\20170307JHV\\Reports\\20170307JHV_170307_173922_TreatmentReport.pdf\n",
-      "Y:\\AlignRT Backup\\Room A\\20170308\n",
-      "Y:\\AlignRT Backup\\Room A\\20170308\\Reports\\VisionRT_AlignRT__20170308_20171214060050.xml\n",
-      "Y:\\AlignRT Backup\\Room A\\20170327DJJ\n"
+      "Sample_Directory/20170307JHV\n",
+      "Sample_Directory/20170307JHV/Reports/20170307JHV_170307_173922_TreatmentReport.pdf\n",
+      "Sample_Directory/20150925ZEL\n",
+      "Sample_Directory/20150925ZEL/Reports/screen_captures\n",
+      "Sample_Directory/OSMS-IPA\n",
+      "Sample_Directory/OSMS-IPA/Reports/OSMS-IPA_161229_102424_TreatmentReport.rtf\n",
+      "Sample_Directory/20160804MG\n",
+      "Sample_Directory/20160804MG/Reports/20160804MG_170611_165801_TreatmentReport.pdf\n",
+      "Sample_Directory/20170912\n",
+      "Sample_Directory/20170912/Reports/20170912_170918_203858_TreatmentReport.pdf\n",
+      "Sample_Directory/20170303ZEL\n",
+      "Sample_Directory/20170303ZEL/Reports/20170303ZEL_170307_095804_TreatmentReport.pdf\n",
+      "Sample_Directory/SVS CAP HET\n",
+      "Sample_Directory/SVS CAP HET/Reports/SVS CAP HET_170227_141737_TreatmentReport.pdf\n",
+      "Sample_Directory/20170308\n",
+      "Sample_Directory/20170308/Reports/screen_captures\n",
+      "Sample_Directory/20170327DJJ\n"
      ]
     },
     {
@@ -105,10 +113,10 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-a0989a2cfe30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSGRT_Patient_Tool\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-34-c29479fa2413>\u001b[0m in \u001b[0;36mSGRT_Patient_Tool\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m         if (os.path.isfile('{0}\\\\{1}\\\\Patient Details.ini'.format(sgrt_path,folder)) or \n\u001b[1;32m     58\u001b[0m             os.path.isfile('{0}\\\\{1}\\\\Patient_Details.ini'.format(sgrt_path,folder))):\n\u001b[0;32m---> 59\u001b[0;31m             \u001b[0msgrt_patients\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPatient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolder\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'{0}\\\\{1}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msgrt_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfolder\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'There are {0} patient folders in {1}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msgrt_patients\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msgrt_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-34-c29479fa2413>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, mrn, path)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmrn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmrn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpatient_details\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPatientDetails\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlast_treatment\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_last_treatment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_last_treatment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-34-c29479fa2413>\u001b[0m in \u001b[0;36mget_last_treatment\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[1;32mprint\u001b[0m \u001b[0mpath\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mlist_of_reports\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{0}\\\\Reports\\\\*'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# * means all if need specific format then *.csv\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0mlatest_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_of_reports\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetctime\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m         \u001b[1;32mprint\u001b[0m \u001b[0mlatest_file\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mlatest_file\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-13-a0989a2cfe30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSGRT_Patient_Tool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-5d314ef4265b>\u001b[0m in \u001b[0;36mSGRT_Patient_Tool\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m         if (os.path.isfile('{0}/{1}/Patient Details.ini'.format(sgrt_path,folder)) or \n\u001b[1;32m     58\u001b[0m             os.path.isfile('{0}/{1}/Patient_Details.ini'.format(sgrt_path,folder))):\n\u001b[0;32m---> 59\u001b[0;31m             \u001b[0msgrt_patients\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPatient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolder\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'{0}/{1}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msgrt_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfolder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'There are {0} patient folders in {1}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msgrt_patients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msgrt_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-5d314ef4265b>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, mrn, path)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmrn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmrn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatient_details\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPatientDetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_treatment\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_last_treatment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_last_treatment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-5d314ef4265b>\u001b[0m in \u001b[0;36mget_last_treatment\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mlist_of_reports\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{0}/Reports/*'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# * means all if need specific format then *.csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0mlatest_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_of_reports\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetctime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mlatest_file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mlatest_file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
      ]
     }
