--- a/SGRT Patient Tool.ipynb
+++ b/SGRT Patient Tool.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Import Standard Libraries\n",
-    "import os\n",
-    "import xml.etree.ElementTree as ET\n",
+    "import os.path, time\n",
     "import glob\n",
     "import pdb\n",
     "\n",
@@ -51,9 +50,14 @@
     "    def get_last_treatment(self,path):\n",
     "        print path\n",
     "        list_of_reports = glob.glob('{0}/Reports/*'.format(path)) # * means all if need specific format then *.csv\n",
-    "        latest_file = max(list_of_reports, key=os.path.getctime)\n",
-    "        print latest_file\n",
-    "        return latest_file\n",
+    "        if not list_of_reports:\n",
+    "            # list of reports is empty\n",
+    "            print \"Reports is empty\"\n",
+    "            return 0\n",
+    "        else:\n",
+    "            latest_file = max(list_of_reports, key=os.path.getctime)\n",
+    "            print time.ctime(os.path.getctime(latest_file))\n",
+    "            return time.ctime(os.path.getctime(latest_file))\n",
     "\n",
     "def SGRT_Patient_Tool():\n",
     "    print('Welcome to the SGRT Patient Tool')\n",
@@ -77,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -88,42 +92,123 @@
      "text": [
       "Welcome to the SGRT Patient Tool\n",
       "Sample_Directory/20170307JHV\n",
-      "Sample_Directory/20170307JHV/Reports/20170307JHV_170307_173922_TreatmentReport.pdf\n",
+      "Wed Jan 31 16:48:44 2018\n",
       "Sample_Directory/20150925ZEL\n",
-      "Sample_Directory/20150925ZEL/Reports/screen_captures\n",
+      "Wed Jan 31 16:48:42 2018\n",
       "Sample_Directory/OSMS-IPA\n",
-      "Sample_Directory/OSMS-IPA/Reports/OSMS-IPA_161229_102424_TreatmentReport.rtf\n",
+      "Wed Jan 31 16:48:47 2018\n",
       "Sample_Directory/20160804MG\n",
-      "Sample_Directory/20160804MG/Reports/20160804MG_170611_165801_TreatmentReport.pdf\n",
+      "Wed Jan 31 16:48:42 2018\n",
       "Sample_Directory/20170912\n",
-      "Sample_Directory/20170912/Reports/20170912_170918_203858_TreatmentReport.pdf\n",
+      "Wed Jan 31 16:48:45 2018\n",
       "Sample_Directory/20170303ZEL\n",
-      "Sample_Directory/20170303ZEL/Reports/20170303ZEL_170307_095804_TreatmentReport.pdf\n",
+      "Wed Jan 31 16:48:43 2018\n",
       "Sample_Directory/SVS CAP HET\n",
-      "Sample_Directory/SVS CAP HET/Reports/SVS CAP HET_170227_141737_TreatmentReport.pdf\n",
+      "Wed Jan 31 16:48:47 2018\n",
       "Sample_Directory/20170308\n",
-      "Sample_Directory/20170308/Reports/screen_captures\n",
-      "Sample_Directory/20170327DJJ\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-a0989a2cfe30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mSGRT_Patient_Tool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-12-5d314ef4265b>\u001b[0m in \u001b[0;36mSGRT_Patient_Tool\u001b[0;34m()\u001b[0m\n\u001b[1;32m     57\u001b[0m         if (os.path.isfile('{0}/{1}/Patient Details.ini'.format(sgrt_path,folder)) or \n\u001b[1;32m     58\u001b[0m             os.path.isfile('{0}/{1}/Patient_Details.ini'.format(sgrt_path,folder))):\n\u001b[0;32m---> 59\u001b[0;31m             \u001b[0msgrt_patients\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPatient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolder\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'{0}/{1}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msgrt_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfolder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'There are {0} patient folders in {1}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msgrt_patients\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msgrt_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-5d314ef4265b>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, mrn, path)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmrn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmrn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpatient_details\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPatientDetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_treatment\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_last_treatment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_last_treatment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-5d314ef4265b>\u001b[0m in \u001b[0;36mget_last_treatment\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mlist_of_reports\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{0}/Reports/*'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# * means all if need specific format then *.csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0mlatest_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_of_reports\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetctime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mlatest_file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mlatest_file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
+      "Wed Jan 31 16:48:45 2018\n",
+      "Sample_Directory/20170327DJJ\n",
+      "Reports is empty\n",
+      "Sample_Directory/VRTQAPhantom_\n",
+      "Wed Jan 31 16:48:47 2018\n",
+      "There are 10 patient folders in Sample_Directory\n",
+      "20170307JHV\n",
+      "Wed Jan 31 16:48:44 2018\n",
+      "20150925ZEL\n",
+      "Wed Jan 31 16:48:42 2018\n",
+      "OSMS-IPA\n",
+      "Wed Jan 31 16:48:47 2018\n",
+      "20160804MG\n",
+      "Wed Jan 31 16:48:42 2018\n",
+      "20170912\n",
+      "Wed Jan 31 16:48:45 2018\n",
+      "20170303ZEL\n",
+      "Wed Jan 31 16:48:43 2018\n",
+      "SVS CAP HET\n",
+      "Wed Jan 31 16:48:47 2018\n",
+      "20170308\n",
+      "Wed Jan 31 16:48:45 2018\n",
+      "20170327DJJ\n",
+      "0\n",
+      "VRTQAPhantom_\n",
+      "Wed Jan 31 16:48:47 2018\n"
      ]
     }
    ],
    "source": [
     "SGRT_Patient_Tool()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Patient Details]\n",
+      "PatientGUID=319aadc3-481d-4dc3-bd60-bd934e0f588c\n",
+      "Prefix=-\n",
+      "Firstname=WinstonLutzTests\n",
+      "Middlename=\n",
+      "Surname=ZZUWQA\n",
+      "Name=WinstonLutzTests ZZUWQA (Other)\n",
+      "Skintone=0\n",
+      "Version=5.0.1749.273\n",
+      "Notes=\n",
+      "[Treatment Site]\n",
+      "Other_Notes=\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisfile = open(\"Sample_Directory/20150925ZEL/Patient_Details.ini\",'r')\n",
+    "print thisfile.read()\n",
+    "thisfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Surname': 'ZZUWQA', 'Name': 'WinstonLutzTests ZZUWQA (Other)', 'Firstname': 'WinstonLutzTests', 'Middlename': '', 'Version': '5.0.1749.273', 'Notes': '', 'Skintone': '0', 'Prefix': '-', 'PatientGUID': '319aadc3-481d-4dc3-bd60-bd934e0f588c', 'Other_Notes': ''}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisfile = open(\"Sample_Directory/20150925ZEL/Patient_Details.ini\",'r')\n",
+    "\n",
+    "d = {}\n",
+    "\n",
+    "for line in thisfile:\n",
+    "    pieces = line.split('=')\n",
+    "    if len(pieces) > 1:\n",
+    "        d[pieces[0]] = pieces[1].split(\"\\n\")[0]\n",
+    "    \n",
+    "print d\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
