--- a/alignrt-tools test.ipynb
+++ b/alignrt-tools test.ipynb
@@ -19,29 +19,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20170307JHV\n",
-      "20150925ZEL\n",
-      "OSMS-IPA\n",
-      "20160804MG\n",
-      "20170912\n",
-      "20170303ZEL\n",
-      "SVS CAP HET\n",
-      "20170308\n",
-      "20170327DJJ\n",
-      "VRTQAPhantom_\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DOB</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>GUID</th>\n",
+       "      <th>IsFromDicom</th>\n",
+       "      <th>LastUsedPlotterType</th>\n",
+       "      <th>LatestApprovedRecordSurfaceTimestamp</th>\n",
+       "      <th>MiddleName</th>\n",
+       "      <th>Notes</th>\n",
+       "      <th>PatientID</th>\n",
+       "      <th>PatientTextureLuminosity</th>\n",
+       "      <th>PatientVersion</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Surname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1999-01-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>TestJHV</td>\n",
+       "      <td>a9aeab94-e65d-45e9-a73c-0d125abcb0ac</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2007-03-17 17:32:11</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20170307JHV</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>ZZUWQA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-09-25</td>\n",
+       "      <td>None</td>\n",
+       "      <td>WinstonLutzTests</td>\n",
+       "      <td>319aadc3-481d-4dc3-bd60-bd934e0f588c</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010-10-17 21:33:00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20150925ZEL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0.1749.273</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>ZZUWQA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Varian</td>\n",
+       "      <td>3491d3c1-80a1-4bbb-84f2-8fd97e887a98</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2027-12-16 13:52:20</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>OSMS-IPA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-08-04</td>\n",
+       "      <td>None</td>\n",
+       "      <td>CHEESE E2D</td>\n",
+       "      <td>c0a673b9-c3ae-4d87-a57f-aa4d73d019a4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2011-06-17 14:47:17</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20160804MG</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>ZZUWQA_EAST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-09-12</td>\n",
+       "      <td>None</td>\n",
+       "      <td>ZZUWQA_IROC_LUNG</td>\n",
+       "      <td>b69d5d38-4558-438b-b58f-18dadc21b6dc</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2018-09-17 20:20:07</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20170912</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>TEST_6FFF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>SimulatorHead</td>\n",
+       "      <td>402484da-90bb-4807-9752-a9a6705e21f8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2007-03-17 09:56:11</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20170303ZEL</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>ZZUWQA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2016-12-24</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Varian</td>\n",
+       "      <td>1bfe55c0-b093-4090-bed5-c251ee1624c7</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2027-02-17 14:16:22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>SVS CAP HET</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2017-03-08</td>\n",
+       "      <td>None</td>\n",
+       "      <td>TB2871</td>\n",
+       "      <td>ffce6e9b-b81d-4740-9120-1c94356ab78b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-08-17 21:01:29</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20170308</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.0.1749.273</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>ZZUWQA_Daily</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017-03-27</td>\n",
+       "      <td>None</td>\n",
+       "      <td>OSMS</td>\n",
+       "      <td>2c319ee7-4a50-40d7-9167-cdab51a5b18a</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2027-03-17 20:44:09</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>20170327DJJ</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.1747</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Example</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1899-01-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>VRT-QA</td>\n",
+       "      <td>cb7aa1e6-62b9-487a-855d-70a07d47e887</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-12-09 19:23:59</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>VRTQAPhantom_</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5.0.487</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Phantom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DOB Description         FirstName  \\\n",
+       "0 1999-01-01        None           TestJHV   \n",
+       "1 2015-09-25        None  WinstonLutzTests   \n",
+       "2 2001-01-01        None            Varian   \n",
+       "3 2016-08-04        None        CHEESE E2D   \n",
+       "4 2017-09-12        None  ZZUWQA_IROC_LUNG   \n",
+       "5 1995-01-01        None     SimulatorHead   \n",
+       "6 2016-12-24        None            Varian   \n",
+       "7 2017-03-08        None            TB2871   \n",
+       "8 2017-03-27        None              OSMS   \n",
+       "9 1899-01-01        None            VRT-QA   \n",
+       "\n",
+       "                                   GUID  IsFromDicom LastUsedPlotterType  \\\n",
+       "0  a9aeab94-e65d-45e9-a73c-0d125abcb0ac        False                None   \n",
+       "1  319aadc3-481d-4dc3-bd60-bd934e0f588c        False                   0   \n",
+       "2  3491d3c1-80a1-4bbb-84f2-8fd97e887a98        False                None   \n",
+       "3  c0a673b9-c3ae-4d87-a57f-aa4d73d019a4        False                None   \n",
+       "4  b69d5d38-4558-438b-b58f-18dadc21b6dc        False                None   \n",
+       "5  402484da-90bb-4807-9752-a9a6705e21f8        False                None   \n",
+       "6  1bfe55c0-b093-4090-bed5-c251ee1624c7        False                None   \n",
+       "7  ffce6e9b-b81d-4740-9120-1c94356ab78b        False                   0   \n",
+       "8  2c319ee7-4a50-40d7-9167-cdab51a5b18a        False                None   \n",
+       "9  cb7aa1e6-62b9-487a-855d-70a07d47e887        False                None   \n",
+       "\n",
+       "  LatestApprovedRecordSurfaceTimestamp MiddleName Notes      PatientID  \\\n",
+       "0                  2007-03-17 17:32:11       None  None    20170307JHV   \n",
+       "1                  2010-10-17 21:33:00       None  None    20150925ZEL   \n",
+       "2                  2027-12-16 13:52:20       None  None       OSMS-IPA   \n",
+       "3                  2011-06-17 14:47:17       None  None     20160804MG   \n",
+       "4                  2018-09-17 20:20:07       None  None       20170912   \n",
+       "5                  2007-03-17 09:56:11       None  None    20170303ZEL   \n",
+       "6                  2027-02-17 14:16:22       None  None    SVS CAP HET   \n",
+       "7                  2022-08-17 21:01:29       None  None       20170308   \n",
+       "8                  2027-03-17 20:44:09       None  None    20170327DJJ   \n",
+       "9                  2012-12-09 19:23:59       None  None  VRTQAPhantom_   \n",
+       "\n",
+       "  PatientTextureLuminosity PatientVersion     Sex       Surname  \n",
+       "0                     None       5.0.1747  Female        ZZUWQA  \n",
+       "1                        0   5.0.1749.273   Other        ZZUWQA  \n",
+       "2                     None       5.0.1747   Other          Test  \n",
+       "3                     None       5.0.1747   Other   ZZUWQA_EAST  \n",
+       "4                     None       5.0.1747   Other     TEST_6FFF  \n",
+       "5                     None       5.0.1747    Male        ZZUWQA  \n",
+       "6                     None       5.0.1747   Other          Test  \n",
+       "7                        0   5.0.1749.273   Other  ZZUWQA_Daily  \n",
+       "8                     None       5.0.1747   Other       Example  \n",
+       "9                     None        5.0.487    Male       Phantom  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    " for patient in test_pc.patients:\n",
-    "    print(patient.patient_id)"
+    "\n",
+    "df = test_pc.get_patient_collection_as_dataframe()\n",
+    "\n",
+    "df"
    ]
   },
   {
